force.com/CALM/src/objects/SweptDaybreak__c.object
<CustomObject>
    <description>Daybreak information for sweeped data</description>
    <fields>
        <fullName>dbt__c</fullName>
        <description>The type of daybreak (u for users or s for sessions)</description>
        <label>Daybreak Type</label>
        <picklist>
            <picklistValues>
                <fullName>u</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>s</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>hour0__c</fullName>
        <description>Count of users or sessions for the given hour</description>
        <label>12 AM</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>hour10__c</fullName>
        <description>Count of the users or sessions for the given hour.</description>
        <label>10 AM</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>hour11__c</fullName>
        <description>Count of the users or sessions for the given hour.</description>
        <label>11 AM</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>swp__c</fullName>
        <description>The Sweeper object which this daybreak is associated with</description>
        <label>Sweeper</label>
        <referenceTo>Sweeper__c</referenceTo>
        <relationshipName>dbs</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Swept Daybreak</label>
    <nameField>
        <label>SweepedDaybreak Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Swept Daybreaks</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>